@@ -2,7 +2,7 @@ package com.meterware.httpunit;
 /********************************************************************************************************************
  * $Id$
  *
- * Copyright (c) 2002, Russell Gold
+ * Copyright (c) 2002-2003, Russell Gold
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
  * documentation files (the "Software"), to deal in the Software without restriction, including without limitation
@@ -171,6 +171,15 @@ class FormParameter {
         FormControl[] controls = getControls();
         for (int i = 0; i < controls.length; i++) {
             if (!controls[i].isReadOnly()) return false;
+        }
+        return true;
+    }
+
+
+    public boolean isHiddenParameter() {
+        FormControl[] controls = getControls();
+        for (int i = 0; i < controls.length; i++) {
+            if (!controls[i].isHidden()) return false;
         }
         return true;
     }
